--- a/demo/src/main/res/values/strings.xml
+++ b/demo/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
-    <string name="app_name">ingsw-group1-replicated-network</string>
+    <string name="app_name">NetworkTester</string>
+    <string name="textview">TextView</string>
 </resources>
